--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -68,21 +68,29 @@ h2 {
     color: #7D451B;
     font-size: 48px;
     font-weight: 600;
+    line-height: 55px;
 }
 
 h3 {
     font-family: "Josefin Slab", serif;
     font-weight: 600;
+    color: #D9BDAA;
+    font-size: 24px;
+    margin-bottom: 25px;
+    line-height: 33px;
 }
 
 p {
     font-family: "Josefin Sans", sans-serif;
     color: #4A5568;
     font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 10 px;
+
 }
 
 .rect {
-    width: 55%;
+    width: 52%;
     height: 860px;
     background-color: #F0EAE6;
     position: absolute;
@@ -220,7 +228,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 1%;
+    gap: 5px;
 }
 
 .osteo__all__link:hover {
@@ -232,13 +240,14 @@ p {
     position: relative;
     overflow: hidden;
     border-radius: 10px;
-    width: 230px;
-    height: 200px;
+    width: 18%;
+    height: 300px;
     border-radius: 10px;
 }
 
 .osteo__all__img {
     height: 100%;
+    object-fit: fill;
 }
 
 .osteo__all__figcaption {
@@ -279,4 +288,29 @@ p {
     color: #ffffff;
     font-size: 12px;
     border-color: #ffffff;
+}
+.comfort {}
+
+.comfort__title {
+    text-align: center;
+    margin-bottom: 85px;
+}
+
+.comfort__wrapper__home {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 3%;
+}
+
+.comfort__wrapper__home__article {
+    max-width: 530px;
+}
+
+.photo {
+    width: 600px;
+    height: 450px;
+    background-color: red;
 }
