--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -85,7 +85,7 @@ p {
     color: #4A5568;
     font-size: 16px;
     line-height: 25px;
-    margin-bottom: 10 px;
+    /* margin-bottom: 10px; */
 
 }
 
@@ -97,6 +97,10 @@ p {
     top: 0;
     right: 0;
     z-index: -1;
+}
+
+.sect-mb {
+    margin-bottom: 200px;
 }
 
 .header {
@@ -145,9 +149,22 @@ p {
     color: #ffffff;
     width: 150px;
     height: 60px;
-    background-color: #282828;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.btn-xl {
+    height: 90px;
+    width: 250px;
+    font-size: 18px;
+}
+
+.btn-black {
+    background-color: #282828;
+}
+
+.btn-light {
+    background-color: #D9BDAA;
 }
 
 .hero {
@@ -156,8 +173,8 @@ p {
     justify-content: space-between;
     align-items: center;
     max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 10px 200px;
+    margin: 0 auto 200px;
+    padding: 0 10px 0;
 }
 
 .hero__wrapper {
@@ -202,9 +219,7 @@ p {
     max-width: 50%;
 }
 
-.osteo {
-    margin-bottom: 200px;
-}
+.osteo {}
 
 .osteo__intro {
     margin-bottom: 85px;
@@ -293,7 +308,13 @@ p {
 
 .comfort__title {
     text-align: center;
-    margin-bottom: 85px;
+    margin-bottom: 50px;
+}
+
+.comfort__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
 }
 
 .comfort__wrapper__home {
@@ -309,8 +330,70 @@ p {
     max-width: 530px;
 }
 
+.comfort_wrapper__home__article__text {
+    margin-bottom: 20px;
+}
+
+.comfort_wrapper__home__article__text p {
+    margin-bottom: 10px;
+}
+
 .photo {
     width: 600px;
     height: 450px;
+    background-color: red;
+}
+
+.banner {
+    width: 100%;
+    height: 400px;
+    background: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 900px; 
+    margin: 0 auto;
+}
+
+
+.banner__title {
+    color: #ffffff;
+    font-size: 48px;
+    max-width: 580px;
+    line-height: 55px;
+}
+
+.advice {}
+
+.advice__title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.advice__card {
+    background-color: #F5F5F5;
+    max-width: 612px;
+    border-radius: 10px;
+    padding: 20px 36px;
+}
+
+.advice__card__avatar {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 25px;
+}
+
+.advice__card__avatar__img {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
     background-color: red;
 }
