--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -146,17 +146,33 @@ p {
 .navbar {
     display: flex;
     gap: 30px;
-    align-items: center;
+    align-items: baseline;
 }
 
+.navbar__link {
+font-family: "Josefin Slab", serif;
+    text-decoration: none;
+    color: #000000;
+    font-weight: 600;
+    font-size: 15px;
+    transition: all .2s ease-in-out;
+    border-bottom: 1px solid transparent;}
+
 .btn {
-    border: none;
     font-family: "Josefin Slab", serif;
+    border: none;
     color: #ffffff;
     width: 150px;
     height: 60px;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+a .btn:hover {
+    border-color: transparent;
+    text-decoration: none;
 }
 
 .btn-xl {
@@ -191,7 +207,55 @@ p {
 .btn-disabled:hover {
     color: #aeaeae;
     border-bottom: 1px solid #aeaeae;
+}
 
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    padding: initial;
+    transition: all .2s ease-in-out;
+}
+
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 30px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    min-width: 255px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* padding: 12px 16px; */
+    z-index: 1;
+    overflow: hidden;
+    transition: all .2s ease-in-out;
+
+}
+
+.dropdown-content__wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown span:hover {
+    padding-bottom: 50px;
+}
+
+.dropdown-content__wrapper__link {
+    padding: 15px;
+    border-bottom: 1px solid rgb(231, 231, 231);
+
+}
+
+.dropdown-content__wrapper__link:hover {
+    background-color: #c0a492;
+    color: #ffffff;
 }
 
 
@@ -264,7 +328,10 @@ p {
     max-width: 50%;
 }
 
-.osteo {}
+.osteo {
+    padding: 0 10px;
+
+}
 
 .osteo__intro {
     margin-bottom: 85px;
@@ -291,6 +358,10 @@ p {
     gap: 5px;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.osteo__all__link {
+    flex: 1;
 }
 
 .osteo__all__link:hover {
@@ -353,7 +424,9 @@ p {
     font-size: 12px;
     border-color: #ffffff;
 }
-.comfort {}
+.comfort {
+    padding: 0 10px;
+}
 
 .comfort__title {
     text-align: center;
@@ -412,7 +485,7 @@ p {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 900px; 
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -428,7 +501,6 @@ p {
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-  
 }
 
 .advice__title {
@@ -564,6 +636,22 @@ p {
     display: none;
 }
 
+/* @media screen and (max-width: 1050px) {
+
+    .osteo__all__figcaption {
+        position: initial;
+        background: red;
+        opacity: 1;
+    }
+
+    .osteo__all__figcaption__title {
+        color: black;
+    }
+    .osteo__all__figure {
+        overflow: initial;
+    }
+} */
+
 @media screen and (max-width: 950px) {
 
     .hero__wrapper__name {
@@ -584,16 +672,30 @@ p {
     }
 
     h2 {
-        font-size: 36px;
+        font-size: 32px;
+        line-height: 35px;
     }
 
     p {
         font-size: 14px;
     }
 
+    .hero__wrapper__link__text {
+        font-size: 14px;
+    }
+
+    .osteo {
+        width: 95%;
+        margin: 50px auto;
+    }
+
+    .osteo__intro {
+        margin-bottom: 20px;
+    }
+
     .osteo__intro__title {
         max-width: 645px;
-        margin: 10px auto;
+        margin: 30px auto;
     }
     .hero {
         flex-direction: column;
@@ -607,6 +709,8 @@ p {
 
     .comfort__wrapper {
         gap: 25px;
+        width: 95%;
+        margin: 0 auto;
     }
     
     .comfort__wrapper__home {
@@ -620,6 +724,10 @@ p {
 
     .comfort__wrapper__home__article h3 {
         text-align: center;
+    }
+
+    .comfort__title {
+        margin-bottom: 20px;
     }
 
     .comfort__wrapper__home__article {
@@ -637,5 +745,25 @@ p {
         text-align: center;
         font-size: 36px;
         max-width: 385px;
+    }
+
+    .photo {
+        width: 100%;
+    }
+
+    .advice {
+        flex-direction: column;
+        width: 95%;
+        margin: 20px auto;
+    }
+
+    .footer__wrapper {
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    .footer__wrapper__me {
+        gap: 20px;
+        margin-bottom: 20px;
     }
 }
