--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -164,7 +164,7 @@ font-family: "Josefin Slab", serif;
     color: #ffffff;
     width: 150px;
     height: 60px;
-    border-radius: 10px;
+    border-radius: 8px;
     cursor: pointer;
     font-size: 16px;
     font-weight: 600;
@@ -224,7 +224,7 @@ a .btn:hover {
     position: absolute;
     top: 30px;
     background-color: #f9f9f9;
-    border-radius: 10px;
+    border-radius: 8px;
     min-width: 255px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     /* padding: 12px 16px; */
@@ -352,16 +352,27 @@ a .btn:hover {
 
 
 .osteo__all {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 5px;
+    justify-content: center; */
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 15px;
     max-width: 1200px;
     margin: 0 auto;
 }
 
+
+
 .osteo__all__link {
     flex: 1;
+}
+
+.osteo__all__link--services {
+    background-color: #F0EAE6;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
 }
 
 .osteo__all__link:hover {
@@ -372,16 +383,16 @@ a .btn:hover {
 .osteo__all__figure {
     position: relative;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 8px;
     flex: 1;
     /* width: 18%; */
-    height: 220px;
-    border-radius: 10px;
+    height: 350px;
+    border-radius: 8px;
 }
 
 .osteo__all__img {
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
 
 .osteo__all__figcaption {
@@ -512,7 +523,7 @@ a .btn:hover {
 .advice__card {
     background-color: #F5F5F5;
     max-width: 612px;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 20px 36px;
     transition: all .2s ease-in-out;
     flex: 1;
