--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -400,7 +400,6 @@ a .btn:hover {
 .osteo__all__link--services {
     background-color: #B18369;
     height: 100%;
-    border-radius: 8px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -425,9 +424,7 @@ a .btn:hover {
 .osteo__all__figure {
     position: relative;
     overflow: hidden;
-    border-radius: 8px;
     flex: 1;
-    /* width: 18%; */
     height: 350px;
     border-radius: 8px;
 }
@@ -513,9 +510,7 @@ a .btn:hover {
 .photo {
     width: 465px;
     height: 470px;
-    background-color: red;
     object-fit: cover;
-    border-radius: 8px;
 }
 
 .banner {
@@ -536,6 +531,8 @@ a .btn:hover {
 .banner__img {
     position: absolute;
     z-index: -1;
+    object-fit: cover;
+    height: 100%;
 }
 
 .banner__wrapper {
@@ -545,16 +542,16 @@ a .btn:hover {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 
 .banner__title {
     color: #ffffff;
     font-size: 48px;
-    max-width: 580px;
+    /* max-width: 580px; */
     line-height: 55px;
     font-family: "Josefin Slab", serif;
-
 }
 
 .banner-secondary {
@@ -726,7 +723,7 @@ a .btn:hover {
     flex-direction: row-reverse;
 }
 .article {
-    padding: 0 5px;
+    padding: 0 10px;
 }
 .article__intro {
     margin-bottom: 20px;
@@ -843,9 +840,12 @@ a .btn:hover {
     .hero__wrapper__link__text {
         font-size: 14px;
     }
+    .osteo__all__figcaption__title {
+        text-align: left;
+    }
 
     .osteo {
-        width: 95%;
+        width: 100%;
         margin: 50px auto;
     }
 
@@ -896,13 +896,14 @@ a .btn:hover {
     }
 
     .banner__wrapper {
-        flex-direction: column;
+        /* flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: center; */
+        
     }
 
     .banner__title {
-        text-align: center;
+        /* text-align: center; */
         font-size: 36px;
         max-width: 385px;
     }
@@ -927,6 +928,51 @@ a .btn:hover {
         gap: 20px;
         margin-bottom: 20px;
     }
+}
+
+@media screen and (max-width: 650px) {
+    p, li {
+        font-size: 14px;
+    }
+
+    h2 {
+        font-size: 26px;
+        line-height: 27px;
+
+    }
+
+    h3 {
+        margin-bottom: 10px;
+        line-height: 27px;
+    }
+    
+
+    .banner {
+        width: 100%;
+        height: 300px;
+    }
+
+    .article__container {
+        flex-direction: column;
+    }
+
+    .article__wrapper__img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+    .comfort__wrapper {
+        width: 100%;
+    }
+    .comfort__wrapper__home__article {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .comfort__wrapper__home__article h3 {
+        text-align: left;
+    }
+
 }
 
 
