--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -18,42 +18,6 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-* {
-  box-sizing: border-box;
-}
-html {
-    scroll-behavior: smooth;
-}
-
-main > nav {
-  position: fixed;
-  top: 2rem;
-  align-self: start;
-}
-
 
 
 a {
@@ -64,6 +28,10 @@ a {
     font-size: 15px;
     transition: all .2s ease-in-out;
     border-bottom: 1px solid transparent;
+}
+
+main {
+    overflow: hidden;
 }
 
 button {
@@ -168,8 +136,12 @@ strong {
     text-align: center;
 }
 
-
 .navbar {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.navbar__menu {
     display: flex;
     gap: 30px;
     align-items: baseline;
@@ -618,7 +590,6 @@ a .btn:hover {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    background-color: red;
 }
 
 .advice__card__avatar__desc {
@@ -712,6 +683,10 @@ a .btn:hover {
 }
 
 .close {
+    display: none;
+}
+
+.menu, .menu-close { 
     display: none;
 }
 .article__container {
@@ -811,48 +786,58 @@ a .btn:hover {
 
 @media screen and (max-width: 950px) {
 
-    .hero__wrapper__name {
+    
+    .hero__wrapper__name, .hero__wrapper__location {
         font-size: 48px;
+        display: block;
     }
-
+    
     .hero__wrapper__location {
         font-size: 36px;
     }
-
+    .hero__wrapper__desc {
+        text-align: center;
+    }
+    
+    .hero__wrapper__link {
+        justify-content: center;
+    }
+    
 }
 
-@media screen and (max-width: 950px) {
 
+
+@media screen and (max-width: 950px) {
+    
     .sect-mb {
         margin-bottom: 50px;
-
     }
-
+    
     h2 {
         font-size: 32px;
         line-height: 35px;
     }
-
+    
     p {
         font-size: 14px;
     }
-
+    
     .hero__wrapper__link__text {
         font-size: 14px;
     }
     .osteo__all__figcaption__title {
         text-align: left;
     }
-
+    
     .osteo {
         width: 100%;
         margin: 50px auto;
     }
-
+    
     .osteo__intro {
         margin-bottom: 20px;
     }
-
+    
     .osteo__intro__title {
         max-width: 645px;
         margin: 30px auto;
@@ -860,13 +845,13 @@ a .btn:hover {
     .hero {
         flex-direction: column;
     }
-
+    
     
     .hero__wrapper {
         margin-top: 80px;
         max-width: 95%;
     }
-
+    
     .comfort__wrapper {
         gap: 25px;
         width: 95%;
@@ -877,56 +862,122 @@ a .btn:hover {
         flex-direction: column-reverse;
         gap: 25px;
     }
-
+    
     .flex-column {
         flex-direction: column;
     }
-
+    
     .comfort__wrapper__home__article h3 {
         text-align: center;
     }
-
+    
     .comfort__title {
         margin-bottom: 20px;
     }
-
+    
     .comfort__wrapper__home__article {
         max-width: 95%;
         margin: 0 auto;
     }
-
+    
     .banner__wrapper {
         /* flex-direction: column;
         align-items: center;
         justify-content: center; */
         
     }
-
+    
     .banner__title {
         /* text-align: center; */
         font-size: 36px;
         max-width: 385px;
     }
-
+    
     .photo {
         width: 100%;
     }
-
+    
     .advice {
         flex-direction: column;
         align-items: center;
         width: 95%;
         margin: 20px auto;
     }
-
+    
     .footer__wrapper {
         padding: 20px;
         flex-direction: column;
     }
-
+    
     .footer__wrapper__me {
         gap: 20px;
         margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 785px) {
+    .rect {
+        display: none;
+    }
+    .navbar__wrapper {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        right: 0;
+        top: -800px;
+        width: 100%;
+        background: #f4eadf;
+        overflow: auto;
+        -webkit-transform: scaleY(0);
+        transform: scaleY(0);
+        -webkit-transform-origin: top;
+        transform-origin: top;
+        transition: .5s;
+        transition: max-height .3s, transform .3s, -webkit-transform .3s;
+        width: 100%;
+        z-index: 1;
+        height: calc(100vh - 100px);
+        
+    }
+    .navbar__link {
+        color: #000000;
+        padding: 10px;
+        display: block;
+        font-size: 20px;
+    }
+    
+    .navbar__menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    
+    .menu, .menu-close {
+        display: block;
+        width: 35px;
+        height: 35px;
+        cursor: pointer;
+    }
+    .test-block {
+        display: block;
+    }
+    .test {
+        display: none;
+    }
+
+    .menu__img {
+        object-fit: contain;
+    }
+
+    .show-menu {
+        max-height: 100vh;
+        padding-bottom: 1rem;
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
+        top: 100px;
     }
 }
 
@@ -976,43 +1027,19 @@ a .btn:hover {
 }
 
 
-/* 1. Enable smooth scrolling */
-html {
-    scroll-behavior: smooth;
-}
-/* 2. Make nav sticky */
-.section-nav {
-    position: sticky;
-    top: 2rem;
-    right: 0;
-    align-self: start;
-    width: 250px;
-    border: 1px solid black;
-}
-/* 3. ScrollSpy active styles (see JS tab for activation) */
-.section-nav li.active > a {
-    color: #333;
-    font-weight: 500;
-}
-.section-nav li {
-    list-style: none;
-}
-/* Sidebar Navigation */
-.section-nav {
-    padding-left: 0;
-    border: 1px solid #efefef;
-    padding: 5px;
-}
-.section-nav .section-nav-link {
-    text-decoration: none;
-    display: block;
-    color: #ff5656;
-    transition: all 50ms ease-in-out; /* 💡 This small transition makes setting of the active state smooth */
-}
-.section-nav .section-nav-link:hover,
-.section-nav .section-nav-link:focus {
-    color: #666;
-}
+@media screen and (max-width: 500px) {
 
+    .header {
+        height: 90px;
+    }
+    
+    .header__name {
+        font-size: 14px;
+        display: block;
+    }
 
+    .show-menu {
+        top: 85px;
+    }
+}
 
