--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -39,9 +39,9 @@ button {
     background: none;
 }
 
-a:hover {
+.navbar__link:hover, .btn:hover, .hero__wrapper__link:hover, .osteo__all__figcaption__link:hover {
     opacity: .5;
-    border-color: #00000080;
+    /* border-color: #00000080; */
 }
 
 img {
@@ -137,14 +137,30 @@ strong {
 }
 
 .navbar {
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 30px;
 }
 .navbar__menu {
     display: flex;
-    gap: 30px;
     align-items: baseline;
+    justify-content: center;
+    gap: 30px;
+}
+
+.navbar__container {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.link-ext {
+    text-decoration: underline;
+    /* color: rgb(0, 0, 255); */
+    font-weight: 200;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 .navbar__link {
@@ -330,6 +346,7 @@ a .btn:hover {
 
 .hero__img {
     max-width: 50%;
+    max-height: 633px;
 }
 
 .osteo {
@@ -551,7 +568,8 @@ a .btn:hover {
 .advice {
     display: flex;
     flex-wrap: wrap;
-    gap: 0 25px;
+    gap: 0 8px;
+    padding: 0 10px;
 }
 
 .advice__title {
@@ -567,6 +585,9 @@ a .btn:hover {
     padding: 20px 36px;
     transition: all .2s ease-in-out;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .advice__card:hover  {
     background-color: #D9BDAA; 
@@ -605,6 +626,7 @@ a .btn:hover {
 .advice__card__bottom__stars {
     object-fit: contain;
     width: 105px;
+    height: auto;
 }
 .advice__card__bottom__link:hover {
     border-color: transparent;
@@ -623,6 +645,7 @@ a .btn:hover {
     padding: 50px 135px;
     display: flex;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .footer__wrapper__me {
@@ -731,6 +754,10 @@ a .btn:hover {
     object-fit: contain;
 }
 
+.navbar__link__mobile {
+    display: none;
+}
+
 @media screen and (max-width: 1050px) {
 
     .osteo__all {
@@ -769,7 +796,7 @@ a .btn:hover {
     }
 
     .osteo__all__img {
-        max-height: 400px;
+        height: 300px;
     }
 
     .osteo__all__figcaption__link {
@@ -829,10 +856,11 @@ a .btn:hover {
         text-align: left;
     }
     
-    .osteo {
+    /* .osteo {
         width: 100%;
         margin: 50px auto;
-    }
+        padding: 0 10px;
+    } */
     
     .osteo__intro {
         margin-bottom: 20px;
@@ -854,7 +882,6 @@ a .btn:hover {
     
     .comfort__wrapper {
         gap: 25px;
-        width: 95%;
         margin: 0 auto;
     }
     
@@ -869,6 +896,9 @@ a .btn:hover {
     
     .comfort__wrapper__home__article h3 {
         text-align: center;
+        max-width: 555px;
+        margin: 0 auto;
+
     }
     
     .comfort__title {
@@ -881,16 +911,19 @@ a .btn:hover {
     }
     
     .banner__wrapper {
-        /* flex-direction: column;
+        flex-direction: column;
         align-items: center;
-        justify-content: center; */
-        
+        justify-content: center;   
+    }
+
+    .banner__wrapper--intro {
+        align-items: start;
     }
     
     .banner__title {
-        /* text-align: center; */
+        text-align: center;
         font-size: 36px;
-        max-width: 385px;
+        /* max-width: 385px; */
     }
     
     .photo {
@@ -900,7 +933,7 @@ a .btn:hover {
     .advice {
         flex-direction: column;
         align-items: center;
-        width: 95%;
+        gap: 10px;
         margin: 20px auto;
     }
     
@@ -912,6 +945,10 @@ a .btn:hover {
     .footer__wrapper__me {
         gap: 20px;
         margin-bottom: 20px;
+    }
+
+    .btn-footer {
+        width: 50%;
     }
 }
 
@@ -979,6 +1016,15 @@ a .btn:hover {
         transform: scaleY(1);
         top: 100px;
     }
+    
+    .dropdown {
+        display: none;
+    }
+
+    .navbar__link__mobile {
+        display: block;
+    }
+      
 }
 
 @media screen and (max-width: 650px) {
