--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -132,11 +132,10 @@ strong {
 }
 
 .header {
-    height: 128px;
+    height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
     z-index: 999;
     box-shadow: none; /* Pas d'ombre initialement */
     transition: all .5s ease-in-out;  
@@ -230,6 +229,7 @@ font-family: "Josefin Slab", serif;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all .2s ease-in-out;
 }
 
 a .btn:hover {
@@ -803,6 +803,46 @@ a .btn:hover {
     display: none;
 }
 
+/* Conteneur principal */
+.carousel-container {
+    width: 100%;
+    max-width: 1100px; /* Ajustez à votre besoin */
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    height: 400px; /* Ajustez selon vos images */
+  }
+  
+  /* Piste qui contient les images */
+  .carousel-track {
+    display: flex;
+    animation: scroll-left 15s linear infinite;
+  }
+  
+  /* Chaque item (photo) */
+  .carousel-item {
+    flex: 0 0 33.33%; /* 3 images visibles */
+    max-width: 33.33%;
+    box-sizing: border-box;
+  }
+  
+  .carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+  }
+  
+  /* Animation de défilement */
+  @keyframes scroll-left {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+
 @media screen and (max-width: 1050px) {
 
     .osteo__all {
@@ -880,6 +920,11 @@ a .btn:hover {
 
 
 @media screen and (max-width: 950px) {
+
+    .btn-xl {
+        width: 170px;
+        height: 60px;
+    }
     
     .sect-mb {
         margin-bottom: 50px;
@@ -964,7 +1009,7 @@ a .btn:hover {
     
     .banner__title {
         text-align: center;
-        font-size: 36px;
+        font-size: 24px;
         /* max-width: 385px; */
     }
 
@@ -1065,7 +1110,7 @@ a .btn:hover {
         padding-bottom: 1rem;
         -webkit-transform: scaleY(1);
         transform: scaleY(1);
-        top: 100px;
+        top: 90px;
     }
     
     .dropdown {
