--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -314,8 +314,9 @@ a .btn:hover {
 
 .dropdown-content__wrapper__link {
     padding: 15px;
+}
+.dropdown-content__wrapper__link:not(:last-child) {
     border-bottom: 1px solid rgb(231, 231, 231);
-
 }
 
 .dropdown-content__wrapper__link:hover {
@@ -703,6 +704,7 @@ a .btn:hover {
 }
 
 .tooltip {
+    font-family: "Josefin Slab", serif;
     position: absolute;
     bottom: -25px;
     left: 50%;
@@ -854,25 +856,20 @@ a .btn:hover {
     margin: auto;
     height: 400px; /* Ajustez selon vos images */
   }
-  
-  /* Piste qui contient les images */
-  .carousel-track {
-    display: flex;
-    animation: scroll-left 15s linear infinite;
+
+  .glide {
+    padding-bottom: 100px;
+    background: #ccbba9;
   }
-  
-  /* Chaque item (photo) */
-  .carousel-item {
-    flex: 0 0 33.33%; /* 3 images visibles */
-    max-width: 33.33%;
-    box-sizing: border-box;
-  }
-  
-  .carousel-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-  }
+
+  .glide__slide {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 50px 20px;
+  margin: 10px;
+  list-style: none;
+  max-height: 300px;
+}
 
   .consultation {
     display: flex;
