--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -481,7 +481,7 @@ a .btn:hover {
   z-index: 99;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.55);
+  background: rgba(0, 0, 0, 0.712);
   text-align: center;
   opacity: 0;
   display: flex;
@@ -795,7 +795,7 @@ a .btn:hover {
 }
 
 .article-card__blog-glide {
-  margin-bottom: 20px;
+  margin: 40px 0;
 }
 
 .glide__arrows {
@@ -840,6 +840,10 @@ a .btn:hover {
 /* Assure un centrage parfait avec les slides */
 .glide__slides {
   position: relative;
+  cursor: grab;
+}
+.glide__slides:active {
+  cursor: grabbing;
 }
 
 .glide {
@@ -986,12 +990,11 @@ a .btn:hover {
   width: 100%;
   flex: 1 69%;
 }
+.glide__slide {
+  list-style: none;
+}
 
 @media screen and (max-width: 1545px) {
-  .glide__slide {
-    /* max-height: 300px; */
-    list-style: none;
-  }
 }
 @media screen and (max-width: 1050px) {
   .osteo__all {
@@ -1038,6 +1041,10 @@ a .btn:hover {
   }
 }
 @media screen and (max-width: 1015px) {
+  .article_cards_container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
   .article-card__container {
     flex-direction: column;
   }
@@ -1050,6 +1057,7 @@ a .btn:hover {
   }
   .glide__slide {
     width: 420px;
+    list-style: none;
   }
 }
 
