--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -128,6 +128,11 @@ button {
   border: none;
   background: 0 0;
 }
+
+.background_secondary {
+  background-color: #f2ebe8;
+}
+
 .icon__wrapper {
   position: fixed;
   z-index: 999;
@@ -820,6 +825,36 @@ a .btn:hover {
   margin: 40px 0;
 }
 
+.card {
+  padding: 0 5px;
+  margin-bottom: 20px;
+}
+
+.card img {
+  height: 300px;
+  object-fit: cover;
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__title {
+  margin: 5px;
+}
+
+.card p {
+  text-align: center;
+  font-size: 14px;
+}
+
+.card__list li {
+  font-size: 13px;
+}
+
 .glide__arrows {
   position: absolute;
   top: 50%;
@@ -1043,6 +1078,17 @@ a .btn:hover {
 @media screen and (max-width: 1545px) {
 }
 @media screen and (max-width: 1050px) {
+  .card__content {
+    align-items: initial;
+  }
+  .card p {
+    text-align: left;
+  }
+  .card img {
+    height: 500px;
+    object-fit: cover;
+    object-position: center;
+  }
   .osteo__all {
     grid-template-columns: repeat(1, 1fr);
   }
